# ideo

./: .gitignore  Cargo.toml
src/: gene.rs  main.rs
